Pridany view a sablona

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,15 +1,13 @@
-<html>
-    <head>
-        <title>Lucia's blog</title>
-    </head>
-    <body>
+{% extends 'blog/base.html' %} 
+{% block content %}          
 {% for post in posts %}
-        <div>
-            <h1><a href="http://127.0.0.1:8000/">{{ post.title }}</a></h1>
-        <p>Published: {{ post.published_date }}</p>
-<p>{{ post.text|linebreaksbr }}</p>
-        </div>
-{% endfor %}
-       
-    </body>
-</html>
+                <div class="post">
+                    <div class="date">
+                        {{ post.published_date }}
+                    </div>
+                    <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+                    <p>{{ post.text|linebreaksbr }}</p>
+                </div>
+            {% endfor %}
+{% endblock content %}
+ 
